--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,21 @@
 {
-  "name": "angular-electron",
-  "version": "10.5.2",
+  "name": "AERIE",
+  "version": "1.0.1",
   "main": "main.js",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^0.26.1",
+    "child_process": "^1.0.2",
+    "crypto-js": "^4.1.1",
+    "electron-dl": "^3.3.0",
+    "electron-store": "^8.0.1",
+    "find-process": "^1.4.7",
+    "form-data": "^4.0.0",
+    "node-forge": "^1.3.1",
+    "openpgp": "^5.2.1",
+    "rxjs": "^7.5.5",
+    "uuid": "^8.3.2",
+    "ethers": "5.5.2",
+    "@sentry/electron": "3.0.7"
+  }
 }
