--- a/package.json
+++ b/package.json
@@ -45,6 +45,38 @@
     "lint": "ng lint"
   },
   "dependencies": {
+    "@angular/animations": "13.0.1",
+    "@angular/cdk": "13.3.5",
+    "@angular/material": "8.2.3",
+    "@material/dialog": "14.0.0",
+    "@openpgp/web-stream-tools": "0.0.10",
+    "@sentry/angular": "6.19.7",
+    "@sentry/tracing": "6.19.7",
+    "asn1.js": "5.4.1",
+    "crypto-js": "3.1.9-1",
+    "electron-toaster": "2.0.4",
+    "ethers": "5.5.2",
+    "feather-icons": "4.28.0",
+    "fs": "0.0.1-security",
+    "jquery": "3.6.0",
+    "jwt-decode": "3.1.2",
+    "metismenujs": "1.3.1",
+    "mitt": "3.0.0",
+    "ng-pick-datetime": "6.0.4",
+    "ngx-bootstrap": "2.0.5",
+    "ngx-bootstrap-modal": "2.0.1",
+    "ngx-cookie-service": "13.1.2",
+    "ngx-fs": "0.0.1",
+    "ngx-owl-carousel-o": "7.0.1",
+    "ngx-perfect-scrollbar": "10.1.1",
+    "ngx-toastr": "8.10.2",
+    "openpgp": "5.2.1",
+    "pdfmake": "^0.1.70",
+    "qr-code-styling": "1.6.0-rc.1",
+    "store2": "2.10.0",
+    "sweetalert2": "11.3.4",
+    "web3": "1.7.0",
+    "xlsx": "0.18.2",
     "@angular/common": "13.3.1",
     "@angular/compiler": "13.3.1",
     "@angular/core": "13.3.1",
